--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -29,7 +29,10 @@
   text-align: center;
 }
 .button {
+  width: 88px;
+  height: 48px;
   background: #2563eb;
+  padding: 12px, 24px, 12px, 24px;
   border-radius: 12px;
   font-family: 'Roboto';
   font-weight: 500;
