--- a/src/components/State/index.css
+++ b/src/components/State/index.css
@@ -143,3 +143,12 @@
 .Deceased-dist-color {
   color: #6c757d;
 }
+
+.State-loader-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding: 30px;
+}
