--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -1,77 +1,101 @@
-.about-container {
+.about-app-container {
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #161625;
-  color: white;
+  min-height: 100vh;
+  padding: 20px;
+}
+.loader-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 100vh;
+}
+.about-main-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  line-height: 24px;
+  margin-top: 20px;
+  min-width: 95%;
+  padding-left: 20px;
+}
+.about-title {
+  color: #f8fafc;
+  font-family: 'Roboto';
+  font-size: 35px;
+  font-weight: 600;
+  margin: 8px;
+}
+@media screen and (max-width: 768px) {
+  .about-title {
+    font-size: 28px;
+  }
+}
+.about-date {
+  color: #94a3b8;
+  font-family: 'Roboto';
+  font-size: 15px;
+}
+@media screen and (max-width: 768px) {
+  .about-date {
+    font-size: 12px;
+  }
+}
+.about-heading {
+  color: #e2e8f0;
+  font-family: 'Roboto';
+  font-size: 25px;
+  font-weight: 500;
+}
+@media screen and (max-width: 768px) {
+  .about-heading {
+    font-size: 18px;
+  }
+}
+.about-footer-container {
+  margin-top: 60px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.home-failure-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.failure-image {
+  height: 250px;
+  width: 400px;
+}
+.about-faqs-container {
+  list-style: none;
   margin: 0px;
-}
-.about-section {
-  padding: 10px;
-}
-.list-items-container {
-  list-style-type: none;
-  margin: 10px;
   padding: 0px;
 }
-.about-heading1 {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 48px;
-  line-height: 64px;
-  color: #f8fafc;
+.failure-heading {
+  color: #94a3b8;
+  font-family: 'Roboto';
+  font-size: 30px;
+  margin-top: 25px;
 }
-
-.about-heading2 {
+.about-vaccine-title {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
-  font-size: 24px;
+  font-size: 28px;
   line-height: 36px;
   color: #e2e8f0;
 }
-.about-paragraph {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
-  color: #94a3b8;
-}
-@media (min-width: 768px) {
-  .about-section {
-    margin: 40px;
-  }
-  .about-heading1 {
-    font-size: 24px;
-    line-height: 32px;
-  }
-  .about-heading2 {
-    font-size: 14px;
-    line-height: 16px;
-  }
-  .about-paragraph {
-    font-size: 16px;
-    line-height: 24px;
-  }
-}
-.answer {
-  color: #007bff;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 32px;
-}
-.question {
-  font-size: 14px;
-  color: #94a3b8;
-}
-@media (min-width: 768px) {
-  .answer {
-    font-size: 14px;
-    line-height: 24px;
-  }
-  .question {
-    font-size: 14px;
-    line-height: 24px;
-  }
+.factList {
+  margin-top: 15px;
+  padding-left: 20px;
+  list-style-type: none;
 }
