--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,75 +1,93 @@
-.navbar-container {
+.header-container {
   width: 100%;
   height: 80px;
-  margin-left: 0;
-  margin-top: 0;
   background-color: #1e1e30;
   display: flex;
-  padding-left: 150px;
-  padding-right: 150px;
-}
-
-.container {
-  display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  padding: 28px 60px;
 }
 
-.nav-items {
-  list-style-type: none;
-  color: #ffffff;
-  font-family: 'Roboto';
+.logo {
+  font-family: Bree Serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  color: #f8fafc;
+}
+
+.india {
+  color: #3b82f6;
+}
+.menu {
+  background-color: #161625;
+}
+.mobile-view-header {
   display: flex;
+  justify-content: space-between;
+}
+.close {
+  display: flex;
+  justify-content: center;
   align-items: center;
-  margin-right: 50px;
+  padding-right: 20px;
+  background-color: transparent;
+  border: none;
+}
+.close-icon {
+  color: #ffffff;
+  font-size: 20px;
+}
+.navBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+
+  height: 80px;
+  margin: 0px;
 }
 
-.nav-home {
+.item {
+  list-style: none;
+  font-family: Roboto;
+  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   color: #f8fafc;
-  width: 43px;
+  margin: 0px 16px;
+}
+
+.link {
   text-decoration: none;
 }
 
-.nav-about {
-  font-weight: normal;
-  color: #94a3b8;
-  line-height: 24px;
-  width: 43px;
-  padding-left: 50px;
-  text-decoration: none;
-}
-
-.img-link {
-  text-decoration: none;
-}
-
-.addQ-container {
-  border: none;
-  outline: none;
-  cursor: pointer;
+.toggle-button {
   background-color: transparent;
-}
-.nav-about:hover {
-  font-weight: 700;
-  color: #ffffff;
+  outline: none;
+  border: none;
 }
 
-@media (max-width: 767px) {
-  .navbar-container {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .nav-items {
-    display: none;
-  }
+.mobile-header-container {
+  display: none;
 }
 
-@media (min-width: 768px) {
-  .addQ-container {
+@media (max-width: 600px) {
+  .mobile-header-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    min-height: 80px;
+    background-color: #1e1e30;
+    padding: 0px 10px;
+  }
+
+  .header-container {
     display: none;
   }
 }
